--- a/frontend/src/components/footer/footer.scss
+++ b/frontend/src/components/footer/footer.scss
@@ -3,7 +3,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 30px;
-
+  margin-top: auto;
+  background-color: black;
   span{
 
     &:first-child{
