--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -16,6 +16,9 @@ a {
   font-family: "Inter", sans-serif;
   background-color: $main-bg;
   color: $main-color;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
